# roblox-studio-physical-operation

./: .ghlp-metadata.json  .gitignore  .mcp.json  .npmrc  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run_server.py  vitest.all.config.mjs  vitest.native.config.mjs
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish.yml
agents/: studio-tester.md
commands/: studio-logs.md  studio-run.md  studio-status.md
roblox_studio_mcp/: __init__.py  __main__.py  log_filter.py  windows_utils.py
roblox_studio_physical_operation_mcp/: __main__.py  log_filter.py  log_utils.py  server.py  studio_manager.py  toolbar_detector.py  windows_utils.py
roblox_studio_physical_operation_mcp/platform_utils/: __init__.py  _macos.py  _windows.py
skills/roblox-studio-control/: SKILL.md
src/: cli-parse.mjs  cli.mjs  index.mjs  log-filter.mjs  log-utils.mjs  lune-manager.mjs  mcp-server.mjs  rojo-inject.mjs  screenshot-utils.mjs  studio-manager.mjs  toolbar-detector.mjs
src/platform/: index.mjs  macos.mjs  windows.mjs
templates/: inject_local_path.luau
tests/: README.md  cli.native.test.mjs  cli.test.mjs  default.project.json  game.rbxl  log-filter.test.mjs  log-utils-extra.test.mjs  log-utils.test.mjs  rojo-inject.native.test.mjs  rojo-inject.test.mjs  screenshot-utils.test.mjs  studio-manager.native.test.mjs  studio-manager.test.mjs  test_fix_verify.py  test_full.py  test_issue3.py  test_postmessage.py  test_sendinput.py  test_toolbar_state.py  test_warn_log.py  test_window_capture.py  toolbar-detector-unit.native.test.mjs  toolbar-detector.native.test.mjs  toolbar-detector.test.mjs
tests/fixtures/: test-place.rbxl  (+1 more)
(+2 files in other folders)
