[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roblox-studio-physical-operation-mcp"
version = "0.2.0"
description = "MCP server for controlling Roblox Studio - toolbar detection, game control, log analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "White Dragon Tools" }
]
keywords = [
    "mcp",
    "roblox",
    "roblox-studio",
    "model-context-protocol",
    "automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "pillow",
    "opencv-python",
    "pywin32",
]

[project.urls]
Homepage = "https://github.com/white-dragon-tools/roblox-studio-physical-operation-mcp"
Repository = "https://github.com/white-dragon-tools/roblox-studio-physical-operation-mcp"
Issues = "https://github.com/white-dragon-tools/roblox-studio-physical-operation-mcp/issues"

[project.scripts]
roblox-studio-physical-operation-mcp = "roblox_studio_physical_operation_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["roblox_studio_physical_operation_mcp"]

[tool.hatch.build.targets.wheel.shared-data]
"roblox_studio_physical_operation_mcp/templates" = "roblox_studio_physical_operation_mcp/templates"
